--- a/TradeHubGui/Views/StrategyRunnerView.xaml
+++ b/TradeHubGui/Views/StrategyRunnerView.xaml
@@ -168,7 +168,7 @@
                                     SelectionUnit="FullRow"
                                     AutoGenerateColumns="False">
                         <DataGrid.Columns>
-                            <DataGridTemplateColumn Header="Key" Width="0.3*" SortMemberPath="InstanceKey" IsReadOnly="True">
+                            <DataGridTemplateColumn Header="Key" Width="0.3*" MinWidth="100" SortMemberPath="InstanceKey" IsReadOnly="True">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Border Padding="10,0,8,1" Margin="0,-12" Background="#0FFF" BorderThickness="9,0,0,0" 
@@ -179,8 +179,8 @@
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTextColumn Header="Description" Width="0.5*" Binding="{Binding Path=Description}" IsReadOnly="False"/>
-                            <DataGridTemplateColumn Header="Status" Width="0.2*" IsReadOnly="True">
+                            <DataGridTextColumn Header="Description" Width="0.5*" MinWidth="50" Binding="{Binding Path=Description}" IsReadOnly="False"/>
+                            <DataGridTemplateColumn Header="Status" Width="0.2*" MinWidth="100" IsReadOnly="True">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Border Padding="4,1,4,3" CornerRadius="3" Background="{Binding Status, Converter={StaticResource StatusToBrush}}" HorizontalAlignment="Left" VerticalAlignment="Center">
@@ -266,10 +266,10 @@
                               RowHeight="22">
 
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="Instance key" Width="*" Binding="{Binding Path=Key}" />
-                            <DataGridTextColumn Header="Executed" Width="0.34*" Binding="{Binding Path=Executed}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
-                            <DataGridTextColumn Header="Buy count" Width="0.34*" Binding="{Binding Path=BuyCount}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
-                            <DataGridTextColumn Header="Sell count" Width="0.34*" Binding="{Binding Path=SellCount}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
+                            <DataGridTextColumn Header="Instance key" Width="*" MinWidth="90" Binding="{Binding Path=Key}" />
+                            <DataGridTextColumn Header="Executed" Width="0.34*" MinWidth="70" Binding="{Binding Path=Executed}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
+                            <DataGridTextColumn Header="Buy count" Width="0.34*" MinWidth="80" Binding="{Binding Path=BuyCount}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
+                            <DataGridTextColumn Header="Sell count" Width="0.34*" MinWidth="80" Binding="{Binding Path=SellCount}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
                         </DataGrid.Columns>
                     </DataGrid>
                 </DockPanel>
@@ -296,12 +296,12 @@
                               SelectionChanged="DataGrid_SelectionChanged">
 
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="Order ID" Width="0.22*" Binding="{Binding Path=ID}" />
-                            <DataGridTextColumn Header="Side" Width="0.15*" Binding="{Binding Path=Side}" />
-                            <DataGridTextColumn Header="Price" Width="0.2*" Binding="{Binding Path=Price}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
-                            <DataGridTextColumn Header="Quantity" Width="0.22*" Binding="{Binding Path=Quantity}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
-                            <DataGridTextColumn Header="Time" Width="0.4*" Binding="{Binding Path=Time}" />
-                            <DataGridTemplateColumn Header="Status" Width="0.4*" SortMemberPath="Status">
+                            <DataGridTextColumn Header="Order ID" Width="0.22*" MinWidth="80" Binding="{Binding Path=ID}" />
+                            <DataGridTextColumn Header="Side" Width="0.15*" MinWidth="50" Binding="{Binding Path=Side}" />
+                            <DataGridTextColumn Header="Price" Width="0.2*" MinWidth="50" Binding="{Binding Path=Price}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
+                            <DataGridTextColumn Header="Quantity" Width="0.22*" MinWidth="70" Binding="{Binding Path=Quantity}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
+                            <DataGridTextColumn Header="Time" Width="0.4*" MinWidth="100" Binding="{Binding Path=Time}" />
+                            <DataGridTemplateColumn Header="Status" Width="0.4*" MinWidth="120" SortMemberPath="Status">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Border Padding="4,1,4,3" CornerRadius="3" Background="{Binding Status, Converter={StaticResource OrderStatusToBrush}}" HorizontalAlignment="Left" VerticalAlignment="Center">
