--- a/TradeHubGui/MainWindow.xaml
+++ b/TradeHubGui/MainWindow.xaml
@@ -18,10 +18,11 @@
                  GlowBrush="{StaticResource BaseBrush0}"
                  FontFamily="{StaticResource DefaultFont}"
                  FontSize="{StaticResource NormalFontSize}"
-                 Icon="{StaticResource imgHub}" Closing="OnApplicationClose">
+                 Icon="{StaticResource imgTradeHub}" 
+                 Closing="OnApplicationClose">
     <mah:MetroWindow.IconTemplate>
         <DataTemplate>
-            <Image Height="20" Width="20" Source="{StaticResource imgHub}"/>
+            <Image Height="28" Width="28" Source="{StaticResource imgTradeHub}" Margin="4,0,0,0"/>
         </DataTemplate>
     </mah:MetroWindow.IconTemplate>
 
