--- a/TradeHubGui/Views/GeneticOptimizationWindow.xaml
+++ b/TradeHubGui/Views/GeneticOptimizationWindow.xaml
@@ -45,12 +45,24 @@
             </Border>
         </DataTemplate>
 
+        <DataTemplate x:Key="StartValueDoubleTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:DoubleUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.1" />
+            </Border>
+        </DataTemplate>
+        
         <DataTemplate x:Key="StartValueSingleTemplate">
             <Border Background="#8FFF">
                 <wpfToolkitExtended:SingleUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.01" />
             </Border>
         </DataTemplate>
 
+        <DataTemplate x:Key="StartValueLongTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:LongUpDown Value="{Binding StartValue, UpdateSourceTrigger=PropertyChanged}" Increment="1" />
+            </Border>
+        </DataTemplate>
+        
         <DataTemplate x:Key="EndValueIntegerTemplate">
             <Border Background="#8FFF">
                 <wpfToolkitExtended:IntegerUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="1" />
@@ -69,12 +81,24 @@
             </Border>
         </DataTemplate>
 
+        <DataTemplate x:Key="EndValueDoubleTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:DoubleUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.1" />
+            </Border>
+        </DataTemplate>
+        
         <DataTemplate x:Key="EndValueSingleTemplate">
             <Border Background="#8FFF">
                 <wpfToolkitExtended:SingleUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="0.01" />
             </Border>
         </DataTemplate>
-        
+
+        <DataTemplate x:Key="EndValueLongTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:LongUpDown Value="{Binding EndValue, UpdateSourceTrigger=PropertyChanged}" Increment="1" />
+            </Border>
+        </DataTemplate>
+
     </mah:MetroWindow.Resources>
 
     <i:Interaction.Triggers>
@@ -183,7 +207,9 @@
                                         StartValueIntegerTemplate="{StaticResource StartValueIntegerTemplate}"
                                         StartValueUnsignedIntegerTemplate="{StaticResource StartValueUnsignedIntegerTemplate}"
                                         StartValueDecimalTemplate="{StaticResource StartValueDecimalTemplate}"
-                                        StartValueSingleTemplate="{StaticResource StartValueSingleTemplate}"/>
+                                        StartValueDoubleTemplate="{StaticResource StartValueDoubleTemplate}"
+                                        StartValueSingleTemplate="{StaticResource StartValueSingleTemplate}"
+                                        StartValueLongTemplate="{StaticResource StartValueLongTemplate}"/>
                                 </DataGridTemplateColumn.CellTemplateSelector>
                             </DataGridTemplateColumn>
                             <DataGridTemplateColumn Header="End value" Width="0.4*" MinWidth="80" SortMemberPath="EndValue">
@@ -192,7 +218,9 @@
                                         EndValueIntegerTemplate="{StaticResource EndValueIntegerTemplate}"
                                         EndValueUnsignedIntegerTemplate="{StaticResource EndValueUnsignedIntegerTemplate}"
                                         EndValueDecimalTemplate="{StaticResource EndValueDecimalTemplate}"
-                                        EndValueSingleTemplate="{StaticResource EndValueSingleTemplate}"/>
+                                        EndValueDoubleTemplate="{StaticResource EndValueDoubleTemplate}"
+                                        EndValueSingleTemplate="{StaticResource EndValueSingleTemplate}"
+                                        EndValueLongTemplate="{StaticResource EndValueLongTemplate}"/>
                                 </DataGridTemplateColumn.CellTemplateSelector>
                             </DataGridTemplateColumn>
                         </DataGrid.Columns>
