--- a/TradeHubGui/Views/StrategyRunnerView.xaml
+++ b/TradeHubGui/Views/StrategyRunnerView.xaml
@@ -180,7 +180,7 @@
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
                             <DataGridTextColumn Header="Description" Width="0.5*" MinWidth="50" Binding="{Binding Path=Description}" IsReadOnly="False"/>
-                            <DataGridTemplateColumn Header="Status" Width="0.2*" MinWidth="100" IsReadOnly="True">
+                            <DataGridTemplateColumn Header="Status" Width="0.1*" MinWidth="60" IsReadOnly="True">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Border Padding="4,1,4,3" CornerRadius="3" Background="{Binding Status, Converter={StaticResource StatusToBrush}}" HorizontalAlignment="Left" VerticalAlignment="Center">
@@ -189,7 +189,7 @@
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn Header="Actions" Width="122" IsReadOnly="True">
+                            <DataGridTemplateColumn Header="Actions" Width="152" IsReadOnly="True">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Right">
@@ -223,6 +223,12 @@
                                                         Command="{Binding DataContext.DeleteInstanceCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}">
                                                 <Image Width="12" Height="12" Margin="2" Source="{StaticResource imgDelete}" UseLayoutRounding="True"/>
                                             </Button>
+
+                                            <Button IsEnabled="True" Focusable="False" Style="{StaticResource ButtonToolBar}" ToolTip="Export local data"
+                                                    Command="{Binding DataContext.ExportInstanceDataCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" >
+                                                <Image Width="12" Height="12" Margin="2,0,0,0" Source="{StaticResource imgExport}" UseLayoutRounding="True"/>
+                                            </Button>
+                                            
                                         </StackPanel>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -277,10 +283,10 @@
                 <GridSplitter Grid.Row="1" ResizeDirection="Rows" />
 
                 <DockPanel Grid.Row="2" Margin="10,20,10,10">
-                    <StackPanel DockPanel.Dock="Top" Margin="10,0" Orientation="Horizontal">
+                    <DockPanel DockPanel.Dock="Top" Margin="10,0" >
                         <TextBlock Text="ORDERS" Style="{StaticResource SubHeaderTextBlockStyle}" Margin="0,0,6,0"/>
                         <TextBlock Text="{Binding Path=SelectedExecutionDetails.Key}" Style="{StaticResource SubHeaderTextBlockStyle}" FontWeight="SemiBold"/>
-                    </StackPanel>
+                    </DockPanel>
 
                     <DataGrid x:Name="OrdersDataGrid" Margin="10"
                               ItemsSource="{Binding OrderDetailsCollection}"
